<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_purple_background"
    android:paddingStart="0dp"
    android:paddingEnd="0dp"
    tools:context="com.example.digi_apps.newshive.ForgotPasswordActivity">

    <TextView
        android:id="@+id/top_header_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="Don't worry\nVerify now\nto Reset"
        android:textColor="@color/newshive_white"
        android:textSize="32sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="14dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16sp"
        android:gravity="right"
        android:text="@string/app_name"
        android:textColor="@color/newshive_white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp" app:cardElevation="4dp"
        android:layout_margin="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="24dp">


            <TextView
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="48dp"
                android:text="Verify Your Email"
                android:textAlignment="center"
                android:textColor="#8200B7"
                android:textSize="32sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Email" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeColor="@color/newshive_text_field_outline"
                app:hintTextColor="@color/newshive_text_field_outline">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/email_address_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/newshive_text_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/Verify_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:backgroundTint="@color/newshive_button_purple"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="Send Reset link"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:cornerRadius="12dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:layout_gravity="left">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don\'t have an account? "
                    android:textSize="16dp"
                    android:layout_marginLeft="0dp">

                </TextView>


                <TextView
                    android:id="@+id/sign_up_instead_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/dont_have_account_text"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </LinearLayout>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</LinearLayout>

